# cicd

./: .gitignore  EVIDENCIAS.md  QUICKSTART.md  README.md  demo-failure.sh
.github/: BRANCH_PROTECTION.md  pull_request_template.md
.github/workflows/: cd-staging-prod.yml  ci.yml
backend/: .coverage  .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
backend/app/: config.py  database.py  logging_config.py
backend/app/auth/: security.py
backend/app/models/: task.py  user.py
backend/app/routes/: auth.py  tasks.py
backend/app/schemas/: task.py  user.py
backend/tests/: conftest.py  test_auth.py.skip  test_database.py  test_health.py  test_security.py  test_tasks.py
docs/: PROJECT_INFO.md
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  Register.tsx
frontend/src/services/: api.ts
frontend/src/test/: App.test.tsx  setup.ts  utils.test.ts
frontend/src/types/: index.ts
scripts/: deploy.sh  rollback.sh
